--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -63,12 +63,11 @@ header nav ul a:hover li {
 }
 
 .modal {
-    border: 1px solid red;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: #eeeeee;
     padding: 2rem;
     z-index: 99999;
