--- a/src/Pages/Hero/hero.css
+++ b/src/Pages/Hero/hero.css
@@ -151,6 +151,7 @@
 
     .img-container .instagram,
     .img-container .linkedin,
+    .img-container .figma,
     .img-container .search {
         display: none;
     }
@@ -158,6 +159,15 @@
     .top .content svg {
         position: absolute;
         left: -30px;
+        bottom: -60px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+
+    .top .content svg {
+        position: absolute;
+        left: -55px;
         bottom: -60px;
     }
 }
