--- a/src/Pages/Hero/hero.css
+++ b/src/Pages/Hero/hero.css
@@ -164,10 +164,12 @@
 }
 
 @media screen and (max-width: 380px) {
-
     .top .content svg {
         position: absolute;
         left: -55px;
         bottom: -60px;
+    }
+    .container {
+        padding-top: 5rem;
     }
 }
