--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,4 +1,4 @@
-header {
+.header {
     position: fixed;
     top: 3%;
     left: 50%;
@@ -14,7 +14,7 @@ header {
     border: 1px solid var(--primary);
 }
 
-header .menu {
+.header .menu {
     display: none;
     width: 55px;
     height: 55px;
@@ -27,22 +27,22 @@ header .menu {
     color: #fff;
 }
 
-header .menu:hover {
+.header .menu:hover {
     background-color: rgb(27, 119, 240);
 }
 
-header nav {
+.header nav {
     width: 100%;
     border-radius: 50px;
     padding: 0.5rem;
 }
 
-header nav ul {
+.header nav ul {
     justify-content: space-between;
     align-items: center;
 }
 
-header nav ul a li {
+.header nav ul a li {
     padding: 15px 20px;
     cursor: pointer;
     border-radius: 50px;
@@ -52,13 +52,13 @@ header nav ul a li {
     color: var(--primary);
 }
 
-header nav ul a li.active {
+.header nav ul a li.active {
     background-color: var(--primary);
     color: #fff;
     border: none;
 }
 
-header nav ul a:hover li {
+.header nav ul a:hover li {
     border-color: rgb(9, 104, 229);
 }
 
@@ -71,6 +71,7 @@ header nav ul a:hover li {
     background-color: #eeeeee;
     padding: 2rem;
     z-index: 99999;
+    display: block;
 }
 
 .modal .menu-modal {
@@ -136,27 +137,27 @@ header nav ul a:hover li {
 
 @media screen and (max-width: 870px) {
 
-    header {
+    .header {
         left: 4rem;
         width: fit-content;
         height: fit-content;
     }
 
-    header .menu {
+    .header .menu {
         margin: 3px;
         width: 44px;
         height: 44px;
     }
 
-    header .menu {
+    .header .menu {
         display: block;
     }
 
-    header .menu .menu-icon {
+    .header .menu .menu-icon {
         font-size: 1.6rem;
     }
 
-    header nav {
+    .header nav {
         display: none;
     }
 }
